# sdl12-compat

./: BUGS  BUGS.md  BUGS.txt  CMakeLists.txt  COMPATIBILITY.md  HOW_TO_TEST_GAMES.md  INSTALL  LICENSE.txt  Makefile.os2  README  README-SDL.txt  README.md  README.txt  autogen.sh  sdl-config.in  sdl.pc.in  sdl12_compat.pc.in  update_version.sh
.github/workflows/: main.yml  release.yml  watcom.yml
build-scripts/: build-release.py  release-info.json  test-versioning.sh  update-version.sh
build-scripts/pkg-support/msvc/: INSTALL.md  README.md
build-scripts/pkg-support/msvc/x64/: INSTALL.md.in
build-scripts/pkg-support/msvc/x86/: INSTALL.md.in
cmake/modules/: FindSDL2.cmake
include/SDL/: SDL.h  SDL_active.h  SDL_audio.h  SDL_byteorder.h  SDL_cdrom.h  SDL_config.h  SDL_copying.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_getenv.h  SDL_joystick.h  SDL_keyboard.h  SDL_keysym.h  SDL_loadso.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_name.h  SDL_opengl.h  SDL_platform.h  SDL_quit.h  SDL_rwops.h  SDL_stdinc.h  SDL_syswm.h  SDL_thread.h  SDL_timer.h  SDL_types.h  SDL_version.h  SDL_video.h  begin_code.h  close_code.h
src/: Makefile.darwin  Makefile.linux  Makefile.mingw  Makefile.os2  Makefile.vc  Makefile.w32  NMakefile  SDL12.exports  SDL12_compat.c  SDL12_compat_objc.m  SDL20_include_wrapper.h  SDL20_syms.h  SDL_12_compat.c  default_cursor.h  dr_mp3.h  version.rc  x86_msvc.h
src/SDLmain/macosx/: SDLMain.h  SDLMain.m
src/SDLmain/win32/: SDL_win32_main.c  version.rc
test/: CMakeLists.txt  Makefile.os2  Makefile.w32  README  checkkeys.c  graywin.c  loopwave.c  testalpha.c  testcdrom.c  testdyngl.c  testiconv.c  testloadso.c  testoverlay.c  testoverlay2.c  testpalette.c  testplatform.c  testsprite.c  testsyswm2on12.c  testtimer.c  testwin.c  testwm.c  threadwin.c
